--- a/web/pom.xml
+++ b/web/pom.xml
@@ -8,8 +8,8 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>web</artifactId>
-
+    <name>Web Project</name>
+    <packaging>jar</packaging>
 
 </project>
