add runEnv property

--- a/web/web.environment.properties
+++ b/web/web.environment.properties
@@ -2,3 +2,6 @@ browserName=chrome
 platform=macOS 10.13
 xyz=test
 version=70
+
+sauce.user=p_PDAauto
+sauce.apikey=b9d2b44a-7151-43f8-9f4e-d2ae58426773
