--- a/web/web.environment.properties
+++ b/web/web.environment.properties
@@ -1,8 +1,12 @@
 runEnv=cloud
 browserName=chrome
+blue=blue
+red=red
 platform=macOS 10.13
 xyz=test
 version=70
+blah=blah
+
 
 sauce.user=p_PDAauto
 sauce.apikey=b9d2b44a-7151-43f8-9f4e-d2ae58426773
