--- a/web/web.environment.properties
+++ b/web/web.environment.properties
@@ -1,4 +1,4 @@
-runEnv=local
+runEnv=cloud
 browserName=chrome
 blue=blue
 red=red
@@ -7,6 +7,7 @@ xyz=test
 version=70
 blah=blah
 
-
 sauce.user=p_PDAauto
 sauce.apikey=b9d2b44a-7151-43f8-9f4e-d2ae58426773
+
+        
