--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
             <artifactId>allure-testng</artifactId>
             <version>2.8.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/ru.yandex.qatools.allure/allure-commandline -->
+        <dependency>
+            <groupId>ru.yandex.qatools.allure</groupId>
+            <artifactId>allure-commandline</artifactId>
+            <version>1.5.4</version>
+        </dependency>
     </dependencies>
 
     <build>
