--- a/web/web.environment.properties
+++ b/web/web.environment.properties
@@ -6,6 +6,7 @@ platform=macOS 10.13
 xyz=test
 version=70
 blah=blah
+ciTool=jenkins
 
 sauce.user=p_PDAauto
 sauce.apikey=b9d2b44a-7151-43f8-9f4e-d2ae58426773
