--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,4 @@ script:
 - mvn -Dtest_suite_xml=testng.xml test
 
 after_script:
-- ls -ltr /home/travis/build/eajazali87/full-stack-automation/web/TestFailureScreenShots
+- ls -la /home/travis/build/eajazali87/full-stack-automation/web/TestFailureScreenShots
